@@ -1170,7 +1170,7 @@ start=KEY_ESC
       <title>Modifier Preset Configuration Options</title>
       <para>
         The options in this sections are sortcuts
-        for <option>--modifier</option>.
+        for <option>--modifier</option> options.
         Unlike <option>--modifier</option> they are not order
         depended, but have a predefined order that is used no matter
         the order in which the options are given.
@@ -1979,6 +1979,19 @@ NAME       = STRING ;]]></programlisting>
             <para>
               See <option>--dpad-rotation</option>.
             </para>
+          </listitem>
+        </varlistentry>
+
+        <varlistentry>
+          <term><option>dpad-restrictor</option>=<replaceable>RESTRICTON</replaceable></term>
+          <listitem>
+            <para>
+              Restricts the dpad movement, values
+              for <replaceable>RESTRICTON</replaceable> can be:
+            </para>
+            <para>x-axis: only allow movement in the X axis</para>
+            <para>y-axis: only allow movement in the Y axis</para>
+            <para>fourway: allow movement in X and Y axis, but filter out diagonals</para>
           </listitem>
         </varlistentry>
 
