@@ -20,6 +20,7 @@
 
 #include <boost/tokenizer.hpp>
 
+#include "modifier/dpad_restrictor_modifier.hpp"
 #include "modifier/dpad_rotation_modifier.hpp"
 #include "modifier/four_way_restrictor_modifier.hpp"
 #include "modifier/rotate_axis_modifier.hpp"
@@ -65,6 +66,10 @@ Modifier::from_string(const std::string& name, const std::string& value)
     else if (name == "stat" || name == "statistic")
     {
       return StatisticModifier::from_string(args);
+    }
+    else if (name == "dpad-restrictor")
+    {
+      return DpadRestrictorModifier::from_string(args);
     }
     else
     {
